compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_anon_function_arguments.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1869
expression: "\nfn(x, x) {\n  Nil\n}\n"
---
error: Argument name already used
  ┌─ /src/one/two.gleam:2:7
  │
2 │ fn(x, x) {
  │       ^

Two `x` arguments have been defined for this function.

